# haskell-book

ch10/: .as_patterns.hs.swp  binary_tree.hs  (+8 more)
ch14/addition/: Addition.hs  Cipher.hs  Exercises.hs  Hangman.hs  addition.cabal
ch14/addition/.stack-work/install/x86_64-linux/lts-13.28/8.6.5/flag-cache/: HUnit-1.6.0.0-C6N9GX1vz2Z4nPL5JbE3ac  QuickCheck-2.12.6.1-CG92sgzQynB255SN47n2RX  addition-0.1.0.0-Gy7i9KuewnF2cXYEWXYw57  addition-0.1.0.0-Hm86ig1ZulFGIAY4RW6HZA  addition-0.1.0.0-Isu6SWsVkOo5ljPO0Uf38Y  ansi-terminal-0.8.2-3u77sgUYOmx5VpFzqliI58  call-stack-0.1.0-J1eWgTNOnM4IGVyeW0v2YZ  clock-0.7.2-6GYCAXixqb8FuS0ooeoDbD  colour-2.3.5-y0xjV3ONUd40VuBtReEvC  erf-2.0.0.0-ExhHoenPosmHlOroBQQced  hspec-2.6.1-7zYlYyHsl5tJCmXPYqTeJi  hspec-core-2.6.1-8bdtDidBmy393mPufigMyq  hspec-discover-2.6.1-GcEMs7l4z3NWJQPD5eMXU  hspec-expectations-0.8.2-xEhsaJyqHC4OUn6v2CIJJ  primitive-0.6.4.0-ILgywxtLpvnAOlEISPpP5b  quickcheck-io-0.2.0-FCQ3WLMxx6eBt09PaQOhVX  random-1.1-3ypV4EIycgb35PKjTYYr5q  setenv-0.1.1.3-HP1VaXwIiC57fC12rF12pz  split-0.2.3.3-6n1iQ0JLFvkeXvJXsAqQc  tf-random-0.5-IjFVdJXpGgq3hBuRJiaT27
ch14/addition/.stack-work/install/x86_64-linux/lts-13.28/8.6.5/lib/x86_64-linux-ghc-8.6.5/addition-0.1.0.0-Gy7i9KuewnF2cXYEWXYw57/: Addition.dyn_hi  Addition.hi
ch14/addition/.stack-work/install/x86_64-linux/lts-13.28/8.6.5/lib/x86_64-linux-ghc-8.6.5/addition-0.1.0.0-Hm86ig1ZulFGIAY4RW6HZA/: Addition.dyn_hi  Addition.hi  WordNumber.dyn_hi  WordNumber.hi
ch14/addition/.stack-work/install/x86_64-linux/lts-13.28/8.6.5/pkgdb/: addition-0.1.0.0-Isu6SWsVkOo5ljPO0Uf38Y.conf  package.cache
(+101 files in other folders)
