name:           addition
version:        0.1.0.0
license-file:   LICENSE
author:         Nick
maintainer:     email@email.com
category:       Text
build-type:     Simple
cabal-version:  >=1.10

library
  exposed-modules:    Addition
  ghc-options:        -Wall -fwarn-tabs
  build-depends:      base >=4.7 && <5
                    , hspec
                    , QuickCheck
                    , random
                    , split
  hs-source-dirs:     .
  exposed-modules:    WordNumber
                    , Exercises
                    , Hangman
                    , Cipher
  default-language:   Haskell2010
